[tool.poetry]
name = "hat-cl"
version = "0.1.0"
description = "HAT (Hard Attention to the Task) Modules for Continual Learning"
authors = ["Xiaotian Duan <xduan7@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{include = "hat"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23"
torch = "^1.9.0"  # Must be manually installed
timm = "^0.6.12"


[tool.poetry.group.dev.dependencies]
filelock = "^3.9.0"
certifi = "^2022.12.7"
urllib3 = "^1.26.14"
requests = "^2.28.2"
idna = "^3.4"
charset-normalizer = "^3.0.1"
black = {extras = ["jupyter"], version = "^23.1.0"}
pytest = "^7.2.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
vulture = "^2.7"
coverage = "^7.2.1"
pysnooper = "^1.1.1"
interrogate = "^1.5.0"
coverage-badge = "^1.1.0"
sphinx = "^6.1.3"
# Notebook example dependencies
jupyter = "^1.0.0"
avalanche-lib = "^0.3.1"
fastapi = "^0.86.0"
lightning = "^2.0.0"
rich = "^13.3.2"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
kip-string-normalization = true
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
ignore = ["E203"]
max-line-length = 79

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore_module = true
ignore-private = true
ignore-nested-classes = true
ignore-nested-functions = true
